--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 Hello World
+Este archivo esta editado con nano dentro del container de codeanyhere
+
+Ahora continúo con el editor de code anywhere
+tras hacer un enlace simbólico al tjezz.github.io ya que solo permite un container y entorno.
+Es una pasada!
