--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ Este archivo esta editado con nano dentro del container de codeanyhere
 Ahora continúo con el editor de code anywhere
 tras hacer un enlace simbólico al tjezz.github.io ya que solo permite un container y entorno.
 Es una pasada!
+
+
+Ahora sigo desde el propio editor de github, porque tarda mucho en actualizar
